Sjednocení stylu pro figure-plain-infographic

--- a/includes-local/figure-plain-infographic.html
+++ b/includes-local/figure-plain-infographic.html
@@ -3,7 +3,7 @@
 <div class="longread-figure">
   <a class="infographic" href="{{ infographic | get_url }}">
     <img
-      class="infographic"
+      class="card my-0"
       alt="{{ include.alt }}"
       src="{{ generated_path }}_1200.png"
       srcset="{{ generated_path }}_600.png 600w, {{ generated_path }}_1200.png 1200w"
