Náhledový obrázek pro stránky atlasu
Tento commit současně reflektuje změny ve web-core a upravuje všechny
speciální stránky ve vyhledávacím indexu.

--- a/collections/_pages/slovnik.html
+++ b/collections/_pages/slovnik.html
@@ -4,7 +4,8 @@ title:       "Slovník pojmů"
 slug:        slovnik
 intro:       "Stručný přehled nejčastěji používaných hesel a zkratek s krátkým vysvětlením či komentářem."
 search_id:   glossary
-search_type: "Slovník"
+preview_type: "Slovník"
+include_in_search: true
 ---
 {%- assign sorted_glossary = site.data.glossary | sort_localized: "name-short" -%}
 
