--- a/collections/_pages/zdroje.html
+++ b/collections/_pages/zdroje.html
@@ -4,7 +4,8 @@ title:       "Další zdroje a odkazy"
 slug:        zdroje
 intro:       "Rozcestník odkazů na stránky vybraných výzkumných institucí, relevantních knih, repozitářů dat i projektů vizualizující data."
 search_id:   resources
-search_type: "Zdroje"
+preview_type: "Zdroje"
+include_in_search: true
 ---
 <div class="section">
     <div class="container">
