Konzistentní použití .perex

--- a/collections/_pages/slovnik.html
+++ b/collections/_pages/slovnik.html
@@ -10,7 +10,7 @@ search_type: "Slovník"
 
 <!-- FIXME dodělat markdownify filtr a upravit glossary.yml --#McZ_2019-10-02 -->
 
-<p class="lead">{{ page.intro }}</p>
+<p class="perex">{{ page.intro }}</p>
 
 <ul class="inline-bullet-list">
     {%- for item in sorted_glossary %}
