--- a/collections/_pages/zdroje.html
+++ b/collections/_pages/zdroje.html
@@ -9,7 +9,7 @@ search_type: "Zdroje"
 <div class="section">
     <div class="container">
         <h1>{{ page.title }}</h1>
-        <p class="lead">{{ page.intro }}</p>
+        <p class="perex">{{ page.intro }}</p>
         {% for res in site.data.resources %}
         <a href="#{{ res[0] }}" class="btn btn-secondary"><i class="{{ res[1].icon }} fa-fw"></i> {{ res[1].name }}</a>
         {% endfor %}
