--- a/collections/_pages/zdroje.html
+++ b/collections/_pages/zdroje.html
@@ -9,7 +9,7 @@ search_type: "Zdroje"
 <div class="section">
     <div class="container">
         <h1>{{ page.title }}</h1>
-        <p class="perex">{{ page.intro }}</p>
+        <p class="perex narrow-text">{{ page.intro }}</p>
         {% for res in site.data.resources %}
         <a href="#{{ res[0] }}" class="btn btn-secondary"><i class="{{ res[1].icon }} fa-fw"></i> {{ res[1].name }}</a>
         {% endfor %}
@@ -27,8 +27,8 @@ search_type: "Zdroje"
                     <img src="/assets-local/resources/{{ item.image }}" class="img-fluid" alt="{{ item.title }}">
                 {% if item.url %}</a>{% endif %}
             </div>
-            <div class="col-12 col-sm-9 col-lg-10">
-                <h2>
+            <div class="col-12 col-sm-9 col-lg-8">
+                <h2 class="mt-0">
                     {% if item.url %}<a href="{{ item.url }}">{% endif %}
                         {{ item.title }}
                     {% if item.url %}</a>{% endif %}
