Oprava jednotky u emisní intenzity

--- a/includes-local/transformace-mixu/country.html
+++ b/includes-local/transformace-mixu/country.html
@@ -37,7 +37,7 @@
                 {%- endif %}
                 </dd>
                 <dt>Emisní intenzita</dt>
-                <dd>{{ include.co2-intensity | replace_first: ".", "," }} t CO<sub>2</sub>eq/MWh</dd>
+                <dd>{{ include.co2-intensity | replace_first: ".", "," }} kg CO<sub>2</sub>eq/MWh</dd>
             </dl>
         </div>
         <div class="card-body">
