--- a/includes-local/klimaticke-zakony/country.html
+++ b/includes-local/klimaticke-zakony/country.html
@@ -44,12 +44,12 @@
                 {% include includes-local/klimaticke-zakony/checklist-item.html
                     label="Poradní orgán"
                     yes=include.advisory
-                    helper="Skupina expertů z různých odvětví, které nezávisle na vládě sledují a hodnotí postup vlády a vydávají doporučení."
+                    helper="Skupina expertů a expertek z různých odvětví, které nezávisle na vládě sledují a hodnotí postup vlády a vydávají doporučení."
                 %}
                 {% include includes-local/klimaticke-zakony/checklist-item.html
                     label="Účast veřejnosti"
                     yes=include.public
-                    helper="Veřejnost je zapojena do tvorby klimatické politiky. Formou konzultace přijímaných opatření, akčních plánů, uhlíkových rozpočtů, podávání vlastních návrhů atd."
+                    helper="Veřejnost je zapojena do tvorby klimatické politiky. A to formou konzultace přijímaných opatření, akčních plánů, uhlíkových rozpočtů nebo podávání vlastních návrhů."
                 %}
             </ul>
         </div>
