--- a/includes-local/klimaticke-zakony/checklist-item.html
+++ b/includes-local/klimaticke-zakony/checklist-item.html
@@ -3,14 +3,11 @@
 {% else %}
     {% assign class_name = "no" %}
 {% endif %}
-<li class="{{ class_name }}">
+<li class="{{ class_name }}" title="{{ include.helper }}" data-toggle="tooltip">
     {% if include.yes %}
         <i class="fas fa-circle-check"></i>
-    {% else %}
+    {%- else %}
         <i class="fas fa-circle-xmark"></i>
-    {% endif %}
-    {% include popover-text.html
-        text=include.label
-        popover=include.helper
-    %}
+    {%- endif -%}
+    {{- include.label }}
 </li>
