--- a/includes-local/klimaticke-zakony/country.html
+++ b/includes-local/klimaticke-zakony/country.html
@@ -1,6 +1,6 @@
 {% assign targets-html = include.targets | default: "Žádné" %}
 {% if include.targets and include.no-lulucf %}
-    {% assign targets-html = targets-html | replace: "%", "% <span title='Cíl nezahrnuje emise z využívání půdy a lesů (tzv. LULUCF)' data-toggle='tooltip'>*</span>" %}
+    {% assign targets-html = targets-html | replace: "%", "% <span title='Cíl nezahrnuje emise z využívání půdy a lesnictví (tzv. LULUCF)' data-toggle='tooltip'>*</span>" %}
 {% endif %}
 <div
     class="card"
@@ -33,27 +33,27 @@
                 {% include includes-local/klimaticke-zakony/checklist-item.html
                     label="Uhlíkové rozpočty"
                     yes=include.budgets
-                    helper="Je stanoveno povolené množství vypuštěných emisí pro určité období."
+                    helper="Je stanoveno, jaké množství emisí smí být za určité období vypuštěno."
                 %}
                 {% include includes-local/klimaticke-zakony/checklist-item.html
                     label="Plánování"
                     yes=include.plans
-                    helper="Vláda nebo odpovědný ministr má povinnost vytvářet průběžné plány pro dosažení stanovených cílů."
+                    helper="Vláda nebo odpovědný ministr má povinnost vytvářet průběžné plány vedoucí k dosažení stanovených cílů."
                 %}
                 {% include includes-local/klimaticke-zakony/checklist-item.html
                     label="Reporting"
                     yes=include.reporting
-                    helper="Odpovědný ministr vládě nebo vláda parlamentu musí průběžně podávat zprávy o dosaženém pokroku."
+                    helper="Odpovědný ministr musí průběžně vládě (nebo vláda parlamentu) podávat zprávy o dosaženém pokroku."
                 %}
                 {% include includes-local/klimaticke-zakony/checklist-item.html
                     label="Poradní orgán"
                     yes=include.advisory
-                    helper="Skupina expertů a expertek z různých odvětví, které nezávisle na vládě sledují a hodnotí postup vlády a vydávají doporučení."
+                    helper="Skupina expertů a expertek z různých odvětví – nezávisle sledují a hodnotí postup vlády a vydávají doporučení."
                 %}
                 {% include includes-local/klimaticke-zakony/checklist-item.html
                     label="Účast veřejnosti"
                     yes=include.public
-                    helper="Veřejnost je zapojena do tvorby klimatické politiky. A to formou konzultace přijímaných opatření, akčních plánů, uhlíkových rozpočtů nebo podávání vlastních návrhů."
+                    helper="Veřejnost je zapojena do klimatické politiky – vyjadřuje se k přijímaným opatřením, akčním plánům a uhlíkovým rozpočtům nebo podává vlastní návrhy."
                 %}
             </ul>
         </div>
