Editace textů k barvám vodíku

--- a/includes-local/barvy-vodiku.html
+++ b/includes-local/barvy-vodiku.html
@@ -1,12 +1,17 @@
 <div class="barvy-vodiku" markdown="1">
-
 {% include figure.html folder="i-barvy-vodiku" name="vodik-zeleny.svg" alt="Piktogram zeleného vodíku" no-lightbox=true %}
-**Zelený** – produkován štěpením vody pomocí elektrolýzy, veškerá potřebná energie pochází z obnovitelných zdrojů
-{% include figure.html folder="i-barvy-vodiku" name="vodik-ruzovy.svg" alt="Piktogram růžového vodíku" no-lightbox=true %}
-**Růžový** – získáván elektrolýzou za pomoci elektřiny a tepla z jaderných elektráren
-{% include figure.html folder="i-barvy-vodiku" name="vodik-modry.svg" alt="Piktogram modrého vodíku" no-lightbox=true %}
-**Modrý** – vyráběn ze zemního plynu, ale emise z tohoto procesu jsou zachyceny a následně uloženy či využity
-{% include figure.html folder="i-barvy-vodiku" name="vodik-sedy.svg" alt="Piktogram šedého vodíku" no-lightbox=true %}
-**Šedý** – produkován ze zemního plynu bez zachytávání CO<sub>2</sub> (v současnosti zatím zdaleka nejběžnější způsob výroby)
 
+**Zelený** se vyrábí štěpením vody pomocí elektrolýzy. Veškerá potřebná energie pochází z obnovitelných zdrojů.
+
+{% include figure.html folder="i-barvy-vodiku" name="vodik-ruzovy.svg" alt="Piktogram růžového vodíku" no-lightbox=true %}
+
+**Růžový** se získává elektrolýzou pomocí elektřiny a tepla z jaderných elektráren.
+
+{% include figure.html folder="i-barvy-vodiku" name="vodik-modry.svg" alt="Piktogram modrého vodíku" no-lightbox=true %}
+
+**Modrý** vyrábí ze zemního plynu, ale emise CO<sub>2</sub> z tohoto procesu jsou zachyceny a následně uloženy či využity (tzv. <glossary id="ccs">CCS</glossary>).
+
+{% include figure.html folder="i-barvy-vodiku" name="vodik-sedy.svg" alt="Piktogram šedého vodíku" no-lightbox=true %}
+
+**Šedý** se vyrábí ze zemního plynu bez zachytávání CO<sub>2</sub>. V současnosti je to zatím zdaleka nejběžnější způsob výroby.
 </div>
