--- a/includes-local/ets2-kalkulacka.html
+++ b/includes-local/ets2-kalkulacka.html
@@ -22,12 +22,12 @@
         <div><span class="price-increase"></span> Kč za litr</div>
         <div class="price-increase-context">+<span class="price-increase-percent">4,9</span> % při ceně <span class="fuel-price">40</span> Kč/l</div>
     </div>
-    <div class="fuel" data-carbon-content="1.9">
+    <div class="fuel" data-carbon-content="200">
         <div class="fuel-name"><i class="fa-solid fa-fire-flame-simple"></i>&ensp;Zemní plyn</div>
-        <div><span class="price-increase"></span> Kč za m<sup>3</sup></div>
-        <div class="price-increase-context">+<span class="price-increase-percent">9,5</span> % při ceně <span class="fuel-price">15</span> Kč/m<sup>3</sup></div>
+        <div><span class="price-increase"></span> Kč za MWh</div>
+        <div class="price-increase-context">+<span class="price-increase-percent">10</span> % při ceně <span class="fuel-price">1500</span> Kč/MWh</div>
     </div>
-    <div class="fuel" data-carbon-content="290.0">
+    <div class="fuel" data-carbon-content="290">
         <div class="fuel-name"><img class="pictogram" alt="Piktogram uhlí" src="/assets-local/figures/emisni-povolenky-ets-2/coal-icon.svg">&ensp;Uhlí</div>
         <div><span class="price-increase"></span> Kč za 100 kg</div>
         <div class="price-increase-context">+<span class="price-increase-percent">32</span> % při ceně <span class="fuel-price">680</span> Kč/100 kg</div>
