Upřesnění stálých cen u stropu 45 eur

--- a/includes-local/ets2-kalkulacka.html
+++ b/includes-local/ets2-kalkulacka.html
@@ -9,7 +9,7 @@
         <div class="slider-scale" role="presentation"></div>
         <div class="slider-greyzone" role="presentation"></div>
         <input class="slider" type="range" min="0" max="70" value="30"  id="allowance-input-range">
-        <div class="greyzone-note">Opatření je nastaveno tak, aby cena povolenky <b>nebyla dlouhodobě vyšší než 45 eur</b></div>
+        <div class="greyzone-note">Opatření je nastaveno tak, aby cena povolenky <b>nebyla dlouhodobě vyšší než 45 eur</b> (ve stálých cenách roku 2020)</div>
     </div>
 
     <div class="fuel" data-carbon-content="2.4">
