Přesun povinné publicity na landing page Atlasu dekarbonizace
- Přesun povinné textace dolů na landing page
- Smazání stránky /atlassfzp + redirect na landing page odsud

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -2,8 +2,11 @@
 layout: empty
 title: "Atlas dekarbonizace Česka"
 slug: atlas-dekarbonizace
+redirect_from:
+  - /atlassfzp
 body-class: landing-page-atlas-dekarbonizace
 extra-scripts: [ /assets-local/js/atlas-dekarbonizace.js ]
+include_in_search: true
 ---
 <!-- Floating Online Badge -->
 <a href="https://dekarbonizujemecesko.cz/" target="_blank" class="online-badge-float">
@@ -160,6 +163,14 @@ extra-scripts: [ /assets-local/js/atlas-dekarbonizace.js ]
             </div>
         </div>
         <p class="logos-text">Tento projekt je financován Evropskou unií v rámci Národního plánu obnovy.</p>
+        <p class="logos-text">Hlavním cílem projektu "Atlas dekarbonizace ČR" je poskytnout srozumitelnou a na datech založenou komunikaci o procesu dekarbonizace v České republice. Projekt si klade za cíl zvýšit povědomí veřejnosti o tom, jak řešit změnu klimatu, a reagovat na obavy z ekonomických a sociálních dopadů nabídkou spolehlivých a snadno přístupných informací. V rámci projektu budou vytvořeny různé vzdělávací nástroje:</p>
+        <ul class="logos-text inline-list">
+            <li>Atlas dekarbonizace ČR – Komplexní publikace, která pokryje strategie dekarbonizace v různých sektorech, jako je energetika, doprava a průmysl, se zaměřením na český a evropský kontext</li><!--
+            --><li>Veřejná výstava – Putovní výstava, která vizuálně komunikuje klíčová sdělení z Atlasu a zpřístupňuje informace širšímu publiku</li><!--
+            --><li>Online kurz – Kurz, který poskytne hlubší znalosti o řešeních klimatické změny a je určen pro vzdělávání odborníků i studentů</li><!--
+            --><li>Regionální akce a podcasty – Diskuze, přednášky a podcastové epizody zaměřené na zapojení komunit a další šíření osvěty.</li>
+        </ul>
+        <p class="logos-text">Termín realizace je 1. 1. 2024 až 30. 11. 2025.</p>
     </div>
 </section>
 
