Nahrání PDF Atlasu dekarbonizace

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -19,7 +19,7 @@ include_in_search: true
         <div class="hero-text">
             <h1>Atlas dekarbonizace Česka</h1>
             <p>Publikace zaměřuje debatu na řešení, ukazuje sektory s největším potenciálem pro snížení emisí a inspiruje k dalším krokům v daty podložené dekarbonizaci.</p>
-            <a href="/atlas-dekarbonizace" class="btn-primary btn-cta">Stáhnout Atlas v PDF</a>
+            <a href="/assets-local/files/atlas-dekarbonizace-ceska.pdf" class="btn-primary btn-cta" target="_blank">Stáhnout Atlas v PDF</a>
         </div>
         
         <div class="hero-image">
@@ -109,7 +109,7 @@ include_in_search: true
             </div>
 
             <div class="cta-box">
-                <a href="/atlas-dekarbonizace" class="btn-primary btn-cta">Stáhnout Atlas v PDF</a>
+                <a href="/assets-local/files/atlas-dekarbonizace-ceska.pdf" class="btn-primary btn-cta" target="_blank">Stáhnout Atlas v PDF</a>
                 <p class="cta-box-text">Chcete Atlas v tištěné podobě? Napište na <a href="mailto:atlas@faktaoklimatu.cz">atlas@faktaoklimatu.cz</a></p>
             </div>
         </div>
@@ -165,10 +165,10 @@ include_in_search: true
         <p class="logos-text">Tento projekt je financován Evropskou unií v rámci Národního plánu obnovy.</p>
         <p class="logos-text">Hlavním cílem projektu "Atlas dekarbonizace ČR" je poskytnout srozumitelnou a na datech založenou komunikaci o procesu dekarbonizace v České republice. Projekt si klade za cíl zvýšit povědomí veřejnosti o tom, jak řešit změnu klimatu, a reagovat na obavy z ekonomických a sociálních dopadů nabídkou spolehlivých a snadno přístupných informací. V rámci projektu budou vytvořeny různé vzdělávací nástroje:</p>
         <ul class="logos-text inline-list">
-            <li>Atlas dekarbonizace ČR – Komplexní publikace, která pokryje strategie dekarbonizace v různých sektorech, jako je energetika, doprava a průmysl, se zaměřením na český a evropský kontext</li><!--
-            --><li>Veřejná výstava – Putovní výstava, která vizuálně komunikuje klíčová sdělení z Atlasu a zpřístupňuje informace širšímu publiku</li><!--
-            --><li>Online kurz – Kurz, který poskytne hlubší znalosti o řešeních klimatické změny a je určen pro vzdělávání odborníků i studentů</li><!--
-            --><li>Regionální akce a podcasty – Diskuze, přednášky a podcastové epizody zaměřené na zapojení komunit a další šíření osvěty.</li>
+            <li>Atlas dekarbonizace ČR – Komplexní publikace, která pokryje strategie dekarbonizace v různých sektorech, jako je energetika, doprava a průmysl, se zaměřením na český a evropský kontext</li>
+            <li>Veřejná výstava – Putovní výstava, která vizuálně komunikuje klíčová sdělení z Atlasu a zpřístupňuje informace širšímu publiku</li>
+            <li>Online kurz – Kurz, který poskytne hlubší znalosti o řešeních klimatické změny a je určen pro vzdělávání odborníků i studentů</li>
+            <li>Regionální akce a podcasty – Diskuze, přednášky a podcastové epizody zaměřené na zapojení komunit a další šíření osvěty.</li>
         </ul>
         <p class="logos-text">Termín realizace je 1. 1. 2024 až 30. 11. 2025.</p>
     </div>
