--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -163,7 +163,7 @@ include_in_search: true
             </div>
         </div>
         <p class="logos-text">Tento projekt je financován Evropskou unií v rámci Národního plánu obnovy.</p>
-        <p class="logos-text">Hlavním cílem projektu "Atlas dekarbonizace ČR" je poskytnout srozumitelnou a na datech založenou komunikaci o procesu dekarbonizace v České republice. Projekt si klade za cíl zvýšit povědomí veřejnosti o tom, jak řešit změnu klimatu, a reagovat na obavy z ekonomických a sociálních dopadů nabídkou spolehlivých a snadno přístupných informací. V rámci projektu budou vytvořeny různé vzdělávací nástroje:</p>
+        <p class="logos-text">Hlavním cílem projektu „Atlas dekarbonizace ČR“ je poskytnout srozumitelnou a na datech založenou komunikaci o procesu dekarbonizace v České republice. Projekt si klade za cíl zvýšit povědomí veřejnosti o tom, jak řešit změnu klimatu, a reagovat na obavy z ekonomických a sociálních dopadů nabídkou spolehlivých a snadno přístupných informací. V rámci projektu budou vytvořeny různé vzdělávací nástroje:</p>
         <ul class="logos-text inline-list">
             <li>Atlas dekarbonizace ČR – Komplexní publikace, která pokryje strategie dekarbonizace v různých sektorech, jako je energetika, doprava a průmysl, se zaměřením na český a evropský kontext</li>
             <li>Veřejná výstava – Putovní výstava, která vizuálně komunikuje klíčová sdělení z Atlasu a zpřístupňuje informace širšímu publiku</li>
