--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -17,13 +17,13 @@ include_in_search: true
 <section class="hero">
     <div class="hero-content">
         <div class="hero-text">
-            <h1>Atlas dekarbonizace Česka</h1>
+            <h1>Atlas <br>dekarbonizace <br>Česka</h1>
             <p>Publikace zaměřuje debatu na řešení, ukazuje sektory s největším potenciálem pro snížení emisí a inspiruje k dalším krokům v daty podložené dekarbonizaci.</p>
             <a href="/assets-local/files/atlas-dekarbonizace-ceska.pdf" class="btn-primary btn-cta" target="_blank">Stáhnout Atlas v PDF</a>
         </div>
         
         <div class="hero-image">
-            <img src="/assets-local/{{ page.slug }}/publikace-mock-up-final.png" alt="Atlas dekarbonizace Česka">
+            <img src="/assets-local/{{ page.slug }}/publikace-mock-up-isometric.png" alt="Atlas dekarbonizace Česka">
         </div>
     </div>
 </section>
@@ -123,11 +123,11 @@ include_in_search: true
             <h2>Online kurz<br>Dekarbonizujeme Česko</h2>
             
             <ul class="course-features">
-                <li>Kurz je dostupný zdarma široké veřejnosti</li>
-                <li>Na konci kurzu obdržíte certifikát o absolvování</li>
-                <li>Studujete kdykoliv, odkudkoliv a vlastním tempem</li>
-                <li>Srozumitelná videa, autorské texty, přehledné infografiky a interaktivní úlohy</li>
-                <li>Založeno na datech: opírá se o ověřené odborné zdroje</li>
+                <li><i class="fa-solid fa-circle-check"></i>  Kurz je dostupný zdarma široké veřejnosti</li>
+                <li><i class="fa-solid fa-circle-check"></i>  Na konci kurzu obdržíte certifikát o absolvování</li>
+                <li><i class="fa-solid fa-circle-check"></i>  Studujete kdykoliv, odkudkoliv a vlastním tempem</li>
+                <li><i class="fa-solid fa-circle-check"></i>  Srozumitelná videa, autorské texty, přehledné infografiky a interaktivní úlohy</li>
+                <li><i class="fa-solid fa-circle-check"></i>  Založeno na datech: opírá se o ověřené odborné zdroje</li>
             </ul>
 
             <a href="https://dekarbonizujemecesko.cz/" class="btn-secondary btn-cta">Přejít na kurz</a>
@@ -141,6 +141,36 @@ include_in_search: true
                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" 
                 allowfullscreen>
             </iframe>
+        </div>
+    </div>
+</section>
+
+<!-- Testimonials Section -->
+<section class="testimonials-section">
+    <div class="testimonials-container">
+        <div class="testimonial-card">
+            <p class="text">Dlouho očekávaný MUST READ! <b>Atlas dekarbonizace je mimořádný počin</b>, který nabízí dosud nejhutnější přehled klíčových faktů a dat. Ten by si měl podle mého názoru přečíst úplně každý, kdo se dekarbonizací České republiky chce seriózně zabývat.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/krajhanzl.jpg" alt="Honza Krajhanzl"></div>
+                <span class="name">Jan Krajhanzl</span>
+                <span class="institution">Institut 2050</span>
+            </div>
+        </div>
+        <div class="testimonial-card">
+            <p class="text">Data o tom, jak se zbavit závislosti na uhlí, ropě a plynu, shromážděná do jedné přehledné bichle. Určitě si to přečtěte, možná zjistíte, že <b>ležet ve statistikách je stejně zábavné jako jezdit prstem po mapě</b>.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/kotecky.jpg" alt="Vojtěch Kotecký"></div>
+                <span class="name">Vojtěch Kotecký</span>
+                <span class="institution">Centrum pro otázky životního prostředí UK</span>
+            </div>
+        </div>
+        <div class="testimonial-card">
+            <p class="text">Dekarbonizace není ideologická volba, ale racionální a ekonomicky smysluplný krok, bez něhož nezajistíme bezpečnou budoucnost. Právě proto má smysl rozhodovat o klimatické politice na základě dat, nikoli dojmů. <b>Atlas nabízí srozumitelný a přehledný pohled na dekarbonizaci</b> – a pro nás, kteří se podílíme na tvorbě politik, je neocenitelným podkladem.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/niedermayer.jpg" alt="Luděk Niedermayer"></div>
+                <span class="name">Luděk Niedermayer</span>
+                <span class="institution">Europoslanec, bývalý viceguvernér ČNB</span>
+            </div>
         </div>
     </div>
 </section>
@@ -165,10 +195,10 @@ include_in_search: true
         <p class="logos-text">Tento projekt je financován Evropskou unií v rámci Národního plánu obnovy.</p>
         <p class="logos-text">Hlavním cílem projektu „Atlas dekarbonizace ČR“ je poskytnout srozumitelnou a na datech založenou komunikaci o procesu dekarbonizace v České republice. Projekt si klade za cíl zvýšit povědomí veřejnosti o tom, jak řešit změnu klimatu, a reagovat na obavy z ekonomických a sociálních dopadů nabídkou spolehlivých a snadno přístupných informací. V rámci projektu budou vytvořeny různé vzdělávací nástroje:</p>
         <ul class="logos-text inline-list">
-            <li>Atlas dekarbonizace ČR – Komplexní publikace, která pokryje strategie dekarbonizace v různých sektorech, jako je energetika, doprava a průmysl, se zaměřením na český a evropský kontext</li>
-            <li>Veřejná výstava – Putovní výstava, která vizuálně komunikuje klíčová sdělení z Atlasu a zpřístupňuje informace širšímu publiku</li>
-            <li>Online kurz – Kurz, který poskytne hlubší znalosti o řešeních klimatické změny a je určen pro vzdělávání odborníků i studentů</li>
-            <li>Regionální akce a podcasty – Diskuze, přednášky a podcastové epizody zaměřené na zapojení komunit a další šíření osvěty.</li>
+            <li><b>Atlas dekarbonizace ČR</b> – Komplexní publikace, která pokryje strategie dekarbonizace v různých sektorech, jako je energetika, doprava a průmysl, se zaměřením na český a evropský kontext</li>
+            <li><b>Veřejná výstava</b> – Putovní výstava, která vizuálně komunikuje klíčová sdělení z Atlasu a zpřístupňuje informace širšímu publiku</li>
+            <li><b>Online kurz</b> – Kurz, který poskytne hlubší znalosti o řešeních klimatické změny a je určen pro vzdělávání odborníků i studentů</li>
+            <li><b>Regionální akce a podcasty</b> – Diskuze, přednášky a podcastové epizody zaměřené na zapojení komunit a další šíření osvěty.</li>
         </ul>
         <p class="logos-text">Termín realizace je 1. 1. 2024 až 30. 11. 2025.</p>
     </div>
