Aktualizace o nový vývoj

--- a/includes-local/ets2-kalkulacka.html
+++ b/includes-local/ets2-kalkulacka.html
@@ -8,30 +8,29 @@
         </div>
         <div class="slider-scale" role="presentation"></div>
         <div class="slider-greyzone" role="presentation"></div>
-        <input class="slider" type="range" min="0" max="70" value="30"  id="allowance-input-range">
-        <div class="greyzone-note">Opatření je nastaveno tak, aby cena povolenky <b>nebyla dlouhodobě vyšší než 45 eur</b> (ve stálých cenách roku 2020)</div>
+        <input class="slider" type="range" min="0" max="120" value="30"  id="allowance-input-range">
     </div>
 
     <div class="fuel" data-carbon-content="2.4">
         <div class="fuel-name"><i class="fa-solid fa-gas-pump benzin"></i>&ensp;Benzín</div>
         <div><span class="price-increase"></span> Kč za litr</div>
-        <div class="price-increase-context">+<span class="price-increase-percent">4,5</span> % při ceně <span class="fuel-price">40</span> Kč/l</div>
+        <div class="price-increase-context">+<span class="price-increase-percent">4,5</span> % při ceně <span class="fuel-price">35</span> Kč/l</div>
     </div>
     <div class="fuel" data-carbon-content="2.6">
         <div class="fuel-name"><i class="fa-solid fa-gas-pump nafta"></i>&ensp;Nafta</div>
         <div><span class="price-increase"></span> Kč za litr</div>
-        <div class="price-increase-context">+<span class="price-increase-percent">4,9</span> % při ceně <span class="fuel-price">40</span> Kč/l</div>
+        <div class="price-increase-context">+<span class="price-increase-percent">4,9</span> % při ceně <span class="fuel-price">35</span> Kč/l</div>
     </div>
     <div class="fuel" data-carbon-content="200">
         <div class="fuel-name"><i class="fa-solid fa-fire-flame-simple"></i>&ensp;Zemní plyn</div>
         <div><span class="price-increase"></span> Kč za MWh</div>
-        <div class="price-increase-context">+<span class="price-increase-percent">10</span> % při ceně <span class="fuel-price">1500</span> Kč/MWh</div>
+        <div class="price-increase-context">+<span class="price-increase-percent">10</span> % při ceně <span class="fuel-price">2500</span> Kč/MWh</div>
     </div>
-    <div class="fuel" data-carbon-content="290">
+    <div class="fuel" data-carbon-content="190">
         <div class="fuel-name"><img class="pictogram" alt="Piktogram uhlí" src="/assets-local/figures/emisni-povolenky-ets-2/coal-icon.svg">&ensp;Uhlí</div>
         <div><span class="price-increase"></span> Kč za 100 kg</div>
-        <div class="price-increase-context">+<span class="price-increase-percent">32</span> % při ceně <span class="fuel-price">680</span> Kč/100 kg</div>
+        <div class="price-increase-context">+<span class="price-increase-percent">32</span> % při ceně <span class="fuel-price">1000</span> Kč/100 kg</div>
     </div>  
 
-    <div id="kurz" class="note">Směnný kurz: 1 € = <span id="exchange-rate">25</span> Kč</div>
+    <div id="kurz" class="note">Směnný kurz: 1 € = <span id="exchange-rate">25</span> Kč, nárůst cen zahrnuje DPH</div>
 </div>
