--- a/includes-local/ets2-kalkulacka.html
+++ b/includes-local/ets2-kalkulacka.html
@@ -32,5 +32,5 @@
         <div class="price-increase-context">+<span class="price-increase-percent">32</span> % při ceně <span class="fuel-price">1000</span> Kč/100 kg</div>
     </div>  
 
-    <div id="kurz" class="note">Směnný kurz: 1 € = <span id="exchange-rate">25</span> Kč, nárůst cen zahrnuje DPH</div>
+    <div id="kurz" class="note">Směnný kurz: 1 € = <span id="exchange-rate">25</span> Kč, nárůst cen zahrnuje DPH (21 %)</div>
 </div>
