[WIP] Nahození změn pro publikaci AD

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -6,6 +6,8 @@ redirect_from:
   - /atlassfzp
 body-class: landing-page-atlas-dekarbonizace
 extra-scripts: [ /assets-local/js/atlas-dekarbonizace.js ]
+preview_type: Publikace
+preview_image: /assets-local/todo.png
 include_in_search: true
 ---
 <!-- Floating Online Badge -->
