Úprava textace landing page AD

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -103,9 +103,9 @@ include_in_search: true
 
             <div class="stat-item">
                 <div class="stat-circle">
-                    <div class="stat-number">42</div>
+                    <div class="stat-number">152</div>
                 </div>
-                <div class="stat-label">infografik</div>
+                <div class="stat-label">přehledných grafů a schémat</div>
             </div>
 
             <div class="cta-box">
