--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -148,7 +148,7 @@ include_in_search: true
 </section>
 
 <!-- Testimonials Section -->
-<section class="testimonials-section">
+<section class="testimonials-section" id="testimonials">
     <div class="testimonials-container">
         <div class="testimonial-card">
             <p class="text">Dlouho očekávaný MUST READ! <b>Atlas dekarbonizace je mimořádný počin</b>, který nabízí dosud nejhutnější přehled klíčových faktů a dat. Ten by si měl podle mého názoru přečíst úplně každý, kdo se dekarbonizací České republiky chce seriózně zabývat.</p>
@@ -174,7 +174,64 @@ include_in_search: true
                 <span class="institution">Europoslanec, bývalý viceguvernér ČNB</span>
             </div>
         </div>
+        <div class="testimonial-card">
+            <p class="text">Fakta o klimatu přinášejí české veřejnosti tolik potřebná data a dokážou jednoduše a přehledně vysvětlit složitou problematiku dekarbonizace, která je bohužel v současnosti spojena s řadou nepravd a je využívána jako nástroj politické manipulace. Doporučuji proto všem, kteří se chtějí v tématu zorientovat, četbu Atlasu dekarbonizace. Už jen proto, abyste dokázali vést věcnou diskusi a byli nejlépe informovaným člověkem v místnosti 😊</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/vobecka.jpg" alt="Kristýna Vobecká"></div>
+                <span class="name">Kristýna Vobecká</span>
+                <span class="institution">ESG a sustanability manager, Wienerberger</span>
+            </div>
+        </div>
+
+        <div class="testimonial-card">
+            <p class="text">Atlas je výborný podklad pro dekarbonizační strategii České republiky a doporučuji ho každému, kdo chce chápat, co dekarbonizace znamená – bez zjednodušování, ale srozumitelně, věcně. Banky potřebují dobře posoudit rizika i příležitosti spojené s přechodem na nízkouhlíkové hospodářství a tento Atlas je pro nás mimořádně srozumitelný a praktický zdroj.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/beranova.jpg" alt="Blanka Beranová"></div>
+                <span class="name">Blanka Beranová</span>
+                <span class="institution">Výkonná ředitelka pro udržitelnost ve skupině ČSOB</span>
+            </div>
+        </div>
+
+        <div class="testimonial-card">
+            <p class="text">Atlas jsou skvěle shromážděné klíčové informace o dekarbonizaci. Nelze najít nic srovnatelného ani v rámci Evropy, ani v rámci světa, pokud budete hledat zároveň hloubku znalostí, komplexnost pohledu a jasnost komunikace.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/keltner.jpg" alt="Miloslav Keltner"></div>
+                <span class="name">Miloslav Keltner</span>
+                <span class="institution">ředitel odboru Strategie Dekrabonizace Hospodářství MŽP</span>
+            </div>
+        </div>
+
+        <div class="testimonial-card">
+            <p class="text">Atlas jsou skvěle shromážděné klíčové informace o dekarbonizaci. Nelze najít nic srovnatelného ani v rámci Evropy, ani v rámci světa, pokud budete hledat zároveň hloubku znalostí, komplexnost pohledu a jasnost komunikace.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/keltner.jpg" alt="Miloslav Keltner"></div>
+                <span class="name">Miloslav Keltner</span>
+                <span class="institution">ředitel odboru Strategie Dekrabonizace Hospodářství MŽP</span>
+            </div>
+        </div>
+
+        <div class="testimonial-card">
+            <p class="text">Debata o klimatické tranzici není vůbec jednoduchá. V Česku se opírá hodně o emoce a málo o fakta. Jsem tedy rád, že Atlas dekarbonizace Česka pomáhá ta fakta do diskuze vnášet. A navíc - pokud jste jako já a rádi ležíte v datech, které vás místy překvapí, mohu ho vřele doporučit!</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/trunecka.jpg" alt="Adam Trunečka"></div>
+                <span class="name">Adam Trunečka</span>
+                <span class="institution">mladý politik STAN</span>
+            </div>
+        </div>
+
+        <div class="testimonial-card">
+            <p class="text">Povinné čtení pro klima optimisty i klima skeptiky, vlastně pro všechny, kdo chtějí data a fakta o energetické transformaci.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/cepicky.jpg" alt="Jáchym Čepický"></div>
+                <span class="name">Jáchym Čepický</span>
+                <span class="institution">GIS vývojář</span>
+            </div>
+        </div>
+        </div>
     </div>
+    <button class="testimonials-toggle" type="button" aria-expanded="false">
+        Zobrazit všechny ohlasy
+    </button>
 </section>
 
 <!-- Logos Section -->
