--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -111,7 +111,7 @@ include_in_search: true
             <div class="cta-box">
                 <a href="/assets-local/files/atlas-dekarbonizace-ceska.pdf" class="btn-primary btn-cta" target="_blank">Stáhnout Atlas v PDF</a>
                 
-              <p class="cta-box-text">Chcete Atlas v tištěné podobě? Získejte jej v kampani na <a href="https://www.donio.cz/atlas-dekarbonizace">Donio.cz</a>.</p> -->
+              <p class="cta-box-text">Chcete Atlas v tištěné podobě? Získejte jej v kampani na <a href="https://www.donio.cz/atlas-dekarbonizace">Donio.cz</a>.</p>
               <!-- <p class="cta-box-text">Chcete Atlas v tištěné podobě? Napište na <a href="mailto:atlas@faktaoklimatu.cz">atlas@faktaoklimatu.cz</a></p> -->
             </div>
         </div>
